# Makefile.am for building the qdp_f3 library

AUTOMAKE_OPTIONS = no-dependencies

QDPSRC1 = \
QDP_F3_c_eq_D_dot_D.c \
QDP_F3_C_eq_D_dot_D.c \
QDP_F3_c_eq_D_dot_D_multi.c \
QDP_F3_C_eq_elem_D.c \
QDP_F3_C_eq_elem_H.c \
QDP_F3_C_eq_elem_M.c \
QDP_F3_C_eq_elem_P.c \
QDP_F3_C_eq_elem_V.c \
QDP_F3_c_eq_H_dot_H.c \
QDP_F3_C_eq_H_dot_H.c \
QDP_F3_c_eq_H_dot_H_multi.c \
QDP_F3_c_eq_M_dot_M.c \
QDP_F3_C_eq_M_dot_M.c \
QDP_F3_c_eq_M_dot_M_multi.c \
QDP_F3_c_eq_P_dot_P.c \
QDP_F3_C_eq_P_dot_P.c \
QDP_F3_c_eq_P_dot_P_multi.c \
QDP_F3_C_eq_trace_M.c \
QDP_F3_c_eq_V_dot_V.c \
QDP_F3_C_eq_V_dot_V.c \
QDP_F3_c_eq_V_dot_V_multi.c \
QDP_F3_create_D.c \
QDP_F3_create_H.c \
QDP_F3_create_M.c \
QDP_F3_create_P.c \
QDP_F3_create_V.c \
QDP_F3_c_veq_D_dot_D.c \
QDP_F3_c_veq_D_dot_D_multi.c \
QDP_F3_c_veq_H_dot_H.c \
QDP_F3_c_veq_H_dot_H_multi.c \
QDP_F3_c_veq_M_dot_M.c \
QDP_F3_c_veq_M_dot_M_multi.c \
QDP_F3_c_veq_P_dot_P.c \
QDP_F3_c_veq_P_dot_P_multi.c \
QDP_F3_c_veq_V_dot_V.c \
QDP_F3_c_veq_V_dot_V_multi.c \
QDP_F3_D_eq_colorvec_V.c \
QDP_F3_D_eq_conj_D.c \
QDP_F3_D_eq_c_times_D.c \
QDP_F3_D_eq_c_times_D_minus_D.c \
QDP_F3_D_eq_c_times_D_plus_D.c \
QDP_F3_D_eq_d.c \
QDP_F3_D_eq_D.c \
QDP_F3_D_eq_diracvec_P.c \
QDP_F3_D_eq_D_mask_I.c \
QDP_F3_D_eq_D_minus_D.c \
QDP_F3_D_eq_D_plus_D.c \
QDP_F3_D_eq_elem_C.c \
QDP_F3_D_eq_func.c \
QDP_F3_D_eq_gamma_times_D.c \
QDP_F3_D_eq_gaussian_S.c \
QDP_F3_D_eq_i_D.c \
QDP_F3_D_eq_Ma_times_D.c \
QDP_F3_D_eq_Ma_times_sD.c \
QDP_F3_D_eqm_conj_D.c \
QDP_F3_D_eqm_c_times_D.c \
QDP_F3_D_eqm_D.c \
QDP_F3_D_eqm_i_D.c \
QDP_F3_D_eqm_Ma_times_D.c \
QDP_F3_D_eqm_Ma_times_sD.c \
QDP_F3_D_eqm_M_times_D.c \
QDP_F3_D_eqm_M_times_sD.c \
QDP_F3_D_eqm_r_times_D.c \
QDP_F3_D_eqm_sMa_times_D.c \
QDP_F3_D_eqm_sMa_times_sD.c \
QDP_F3_D_eqm_sM_times_D.c \
QDP_F3_D_eqm_sM_times_sD.c \
QDP_F3_D_eqm_sprecon_H.c \
QDP_F3_D_eqm_sprecon_M_times_H.c \
QDP_F3_D_eq_M_times_D.c \
QDP_F3_D_eq_M_times_sD.c \
QDP_F3_D_eqm_wilsonspin_M_times_D.c \
QDP_F3_D_eq_r_times_D.c \
QDP_F3_D_eq_r_times_D_minus_D.c \
QDP_F3_D_eq_r_times_D_plus_D.c \
QDP_F3_D_eq_sD.c \
QDP_F3_D_eq_sMa_times_D.c \
QDP_F3_D_eq_sMa_times_sD.c \
QDP_F3_D_eq_sM_times_D.c \
QDP_F3_D_eq_sM_times_sD.c \
QDP_F3_D_eq_sprecon_H.c \
QDP_F3_D_eq_sprecon_M_times_H.c \
QDP_F3_d_eq_sum_D.c \
QDP_F3_d_eq_sum_D_multi.c \
QDP_F3_D_eq_wilsonspin_M_times_D.c \
QDP_F3_D_eq_zero.c \
QDP_F3_discard_D.c \
QDP_F3_discard_H.c \
QDP_F3_discard_M.c \
QDP_F3_discard_P.c \
QDP_F3_discard_V.c \
QDP_F3_D_meq_conj_D.c \
QDP_F3_D_meq_c_times_D.c \
QDP_F3_D_meq_D.c \
QDP_F3_D_meq_i_D.c \
QDP_F3_D_meq_Ma_times_D.c \
QDP_F3_D_meq_Ma_times_sD.c \
QDP_F3_D_meq_M_times_D.c \
QDP_F3_D_meq_M_times_sD.c \
QDP_F3_D_meq_r_times_D.c \
QDP_F3_D_meq_sMa_times_D.c \
QDP_F3_D_meq_sMa_times_sD.c \
QDP_F3_D_meq_sM_times_D.c \
QDP_F3_D_meq_sM_times_sD.c \
QDP_F3_D_meq_sprecon_H.c \
QDP_F3_D_meq_sprecon_M_times_H.c \
QDP_F3_D_meq_wilsonspin_M_times_D.c \
QDP_F3_D_peq_conj_D.c \
QDP_F3_D_peq_c_times_D.c \
QDP_F3_D_peq_D.c \
QDP_F3_D_peq_i_D.c \
QDP_F3_D_peq_Ma_times_D.c \
QDP_F3_D_peq_Ma_times_sD.c \
QDP_F3_D_peq_M_times_D.c \
QDP_F3_D_peq_M_times_sD.c \
QDP_F3_D_peq_r_times_D.c \
QDP_F3_D_peq_sMa_times_D.c \
QDP_F3_D_peq_sMa_times_sD.c \
QDP_F3_D_peq_sM_times_D.c \
QDP_F3_D_peq_sM_times_sD.c \
QDP_F3_D_peq_sprecon_H.c \
QDP_F3_D_peq_sprecon_M_times_H.c \
QDP_F3_D_peq_wilsonspin_M_times_D.c \
QDP_F3_D_veq_c_times_D.c \
QDP_F3_D_veq_D.c \
QDP_F3_D_veq_Ma_times_D.c \
QDP_F3_D_veqm_c_times_D.c \
QDP_F3_D_veqm_D.c \
QDP_F3_D_veqm_Ma_times_D.c \
QDP_F3_D_veqm_M_times_D.c \
QDP_F3_D_veqm_r_times_D.c \
QDP_F3_D_veqm_sprecon_H.c \
QDP_F3_D_veqm_sprecon_M_times_H.c \
QDP_F3_D_veq_M_times_D.c \
QDP_F3_D_veqm_wilsonspin_M_times_D.c \
QDP_F3_D_veq_r_times_D.c \
QDP_F3_D_veq_sD.c \
QDP_F3_D_veq_sprecon_H.c \
QDP_F3_D_veq_sprecon_M_times_H.c \
QDP_F3_D_veq_wilsonspin_M_times_D.c \
QDP_F3_D_vmeq_c_times_D.c \
QDP_F3_D_vmeq_D.c \
QDP_F3_D_vmeq_Ma_times_D.c \
QDP_F3_D_vmeq_M_times_D.c \
QDP_F3_D_vmeq_r_times_D.c \
QDP_F3_D_vmeq_sprecon_H.c \
QDP_F3_D_vmeq_sprecon_M_times_H.c \
QDP_F3_D_vmeq_wilsonspin_M_times_D.c \
QDP_F3_D_vpeq_c_times_D.c \
QDP_F3_D_vpeq_D.c \
QDP_F3_D_vpeq_Ma_times_D.c \
QDP_F3_D_vpeq_M_times_D.c \
QDP_F3_D_vpeq_r_times_D.c \
QDP_F3_D_vpeq_sprecon_H.c \
QDP_F3_D_vpeq_sprecon_M_times_H.c \
QDP_F3_D_vpeq_wilsonspin_M_times_D.c \
QDP_F3_expose_D.c \
QDP_F3_expose_H.c \
QDP_F3_expose_M.c \
QDP_F3_expose_P.c \
QDP_F3_expose_V.c \
QDP_F3_extract_D.c \
QDP_F3_extract_H.c \
QDP_F3_extract_M.c \
QDP_F3_extract_P.c \
QDP_F3_extract_V.c \
QDP_F3_H_eq_colorvec_V.c \
QDP_F3_H_eq_conj_H.c \
QDP_F3_H_eq_c_times_H.c \
QDP_F3_H_eq_c_times_H_minus_H.c \
QDP_F3_H_eq_c_times_H_plus_H.c \
QDP_F3_H_eq_elem_C.c \
QDP_F3_H_eq_func.c \
QDP_F3_H_eq_gaussian_S.c \
QDP_F3_H_eq_h.c \
QDP_F3_H_eq_H.c \
QDP_F3_H_eq_H_mask_I.c \
QDP_F3_H_eq_H_minus_H.c \
QDP_F3_H_eq_H_plus_H.c \
QDP_F3_H_eq_i_H.c \
QDP_F3_H_eq_Ma_times_H.c \
QDP_F3_H_eq_Ma_times_sH.c \
QDP_F3_H_eqm_conj_H.c \
QDP_F3_H_eqm_c_times_H.c \
QDP_F3_H_eqm_H.c \
QDP_F3_H_eqm_i_H.c \
QDP_F3_H_eqm_Ma_times_H.c \
QDP_F3_H_eqm_Ma_times_sH.c \
QDP_F3_H_eqm_M_times_H.c \
QDP_F3_H_eqm_M_times_sH.c \
QDP_F3_H_eqm_r_times_H.c \
QDP_F3_H_eqm_sMa_times_H.c \
QDP_F3_H_eqm_sMa_times_sH.c \
QDP_F3_H_eqm_sM_times_H.c \
QDP_F3_H_eqm_sM_times_sH.c \
QDP_F3_H_eq_M_times_H.c \
QDP_F3_H_eq_M_times_sH.c \
QDP_F3_H_eq_r_times_H.c \
QDP_F3_H_eq_r_times_H_minus_H.c \
QDP_F3_H_eq_r_times_H_plus_H.c \
QDP_F3_H_eq_sH.c \
QDP_F3_H_eq_sMa_times_H.c \
QDP_F3_H_eq_sMa_times_sH.c \
QDP_F3_H_eq_sM_times_H.c \
QDP_F3_H_eq_sM_times_sH.c \
QDP_F3_H_eq_spproj_D.c \
QDP_F3_h_eq_sum_H.c \
QDP_F3_h_eq_sum_H_multi.c \
QDP_F3_H_eq_zero.c \
QDP_F3_H_meq_conj_H.c \
QDP_F3_H_meq_c_times_H.c \
QDP_F3_H_meq_H.c \
QDP_F3_H_meq_i_H.c \
QDP_F3_H_meq_Ma_times_H.c \
QDP_F3_H_meq_Ma_times_sH.c \
QDP_F3_H_meq_M_times_H.c \
QDP_F3_H_meq_M_times_sH.c \
QDP_F3_H_meq_r_times_H.c \
QDP_F3_H_meq_sMa_times_H.c \
QDP_F3_H_meq_sMa_times_sH.c \
QDP_F3_H_meq_sM_times_H.c \
QDP_F3_H_meq_sM_times_sH.c \
QDP_F3_H_peq_conj_H.c \
QDP_F3_H_peq_c_times_H.c \
QDP_F3_H_peq_H.c \
QDP_F3_H_peq_i_H.c \
QDP_F3_H_peq_Ma_times_H.c \
QDP_F3_H_peq_Ma_times_sH.c \
QDP_F3_H_peq_M_times_H.c \
QDP_F3_H_peq_M_times_sH.c \
QDP_F3_H_peq_r_times_H.c \
QDP_F3_H_peq_sMa_times_H.c \
QDP_F3_H_peq_sMa_times_sH.c \
QDP_F3_H_peq_sM_times_H.c \
QDP_F3_H_peq_sM_times_sH.c \
QDP_F3_H_veq_c_times_H.c \
QDP_F3_H_veq_H.c \
QDP_F3_H_veq_Ma_times_H.c \
QDP_F3_H_veqm_c_times_H.c \
QDP_F3_H_veqm_H.c \
QDP_F3_H_veqm_Ma_times_H.c \
QDP_F3_H_veqm_M_times_H.c \
QDP_F3_H_veqm_r_times_H.c \
QDP_F3_H_veq_M_times_H.c \
QDP_F3_H_veq_r_times_H.c \
QDP_F3_H_veq_sH.c \
QDP_F3_H_veq_spproj_D.c \
QDP_F3_H_vmeq_c_times_H.c \
QDP_F3_H_vmeq_H.c \
QDP_F3_H_vmeq_Ma_times_H.c \
QDP_F3_H_vmeq_M_times_H.c \
QDP_F3_H_vmeq_r_times_H.c \
QDP_F3_H_vpeq_c_times_H.c \
QDP_F3_H_vpeq_H.c \
QDP_F3_H_vpeq_Ma_times_H.c \
QDP_F3_H_vpeq_M_times_H.c \
QDP_F3_H_vpeq_r_times_H.c \
QDP_F3_M_eq_antiherm_M.c \
QDP_F3_M_eq_c.c \
QDP_F3_M_eq_colorvec_V.c \
QDP_F3_M_eq_conj_M.c \
QDP_F3_M_eq_c_times_M.c \
QDP_F3_M_eq_c_times_M_minus_M.c \
QDP_F3_M_eq_c_times_M_plus_M.c \
QDP_F3_M_eq_elem_C.c \
QDP_F3_M_eq_func.c \
QDP_F3_M_eq_gaussian_S.c \
QDP_F3_M_eq_i_M.c \
QDP_F3_M_eq_Ma.c \
QDP_F3_M_eq_Ma_times_Ma.c \
QDP_F3_M_eq_Ma_times_M.c \
QDP_F3_M_eq_Ma_times_sM.c \
QDP_F3_M_eq_m.c \
QDP_F3_M_eq_M.c \
QDP_F3_M_eqm_conj_M.c \
QDP_F3_M_eqm_c_times_M.c \
QDP_F3_M_eqm_i_M.c \
QDP_F3_M_eqm_Ma.c \
QDP_F3_M_eq_M_mask_I.c \
QDP_F3_M_eqm_Ma_times_Ma.c \
QDP_F3_M_eqm_Ma_times_M.c \
QDP_F3_M_eqm_Ma_times_sM.c \
QDP_F3_M_eqm_M.c \
QDP_F3_M_eq_M_minus_M.c \
QDP_F3_M_eqm_M_times_Ma.c \
QDP_F3_M_eqm_M_times_M.c \
QDP_F3_M_eqm_M_times_sM.c \
QDP_F3_M_eq_M_plus_M.c \
QDP_F3_M_eqm_r_times_M.c \
QDP_F3_M_eqm_sMa_times_M.c \
QDP_F3_M_eqm_sMa_times_sM.c \
QDP_F3_M_eqm_sM_times_M.c \
QDP_F3_M_eqm_sM_times_sM.c \
QDP_F3_M_eq_M_times_Ma.c \
QDP_F3_M_eq_M_times_M.c \
QDP_F3_M_eq_M_times_sM.c \
QDP_F3_M_eqm_transpose_M.c \
QDP_F3_M_eqm_V_times_Va.c \
QDP_F3_M_eq_r_times_M.c \
QDP_F3_M_eq_r_times_M_minus_M.c \
QDP_F3_M_eq_r_times_M_plus_M.c \
QDP_F3_M_eq_sMa_times_M.c \
QDP_F3_M_eq_sMa_times_sM.c \
QDP_F3_M_eq_sM.c \
QDP_F3_M_eq_sM_times_M.c \
QDP_F3_M_eq_sM_times_sM.c \
QDP_F3_M_eq_spintrace_P.c \
QDP_F3_m_eq_sum_M.c \
QDP_F3_m_eq_sum_M_multi.c \
QDP_F3_M_eq_transpose_M.c \
QDP_F3_M_eq_V_times_Va.c \
QDP_F3_M_eq_zero.c \
QDP_F3_M_meq_conj_M.c \
QDP_F3_M_meq_c_times_M.c \
QDP_F3_M_meq_i_M.c \
QDP_F3_M_meq_Ma.c \
QDP_F3_M_meq_Ma_times_Ma.c \
QDP_F3_M_meq_Ma_times_M.c \
QDP_F3_M_meq_Ma_times_sM.c \
QDP_F3_M_meq_M.c \
QDP_F3_M_meq_M_times_Ma.c \
QDP_F3_M_meq_M_times_M.c \
QDP_F3_M_meq_M_times_sM.c \
QDP_F3_M_meq_r_times_M.c \
QDP_F3_M_meq_sMa_times_M.c \
QDP_F3_M_meq_sMa_times_sM.c \
QDP_F3_M_meq_sM_times_M.c \
QDP_F3_M_meq_sM_times_sM.c \
QDP_F3_M_meq_transpose_M.c \
QDP_F3_M_meq_V_times_Va.c \
QDP_F3_M_peq_conj_M.c \
QDP_F3_M_peq_c_times_M.c \
QDP_F3_M_peq_i_M.c \
QDP_F3_M_peq_Ma.c \
QDP_F3_M_peq_Ma_times_Ma.c \
QDP_F3_M_peq_Ma_times_M.c \
QDP_F3_M_peq_Ma_times_sM.c \
QDP_F3_M_peq_M.c \
QDP_F3_M_peq_M_times_Ma.c \
QDP_F3_M_peq_M_times_M.c \
QDP_F3_M_peq_M_times_sM.c \
QDP_F3_M_peq_r_times_M.c \
QDP_F3_M_peq_sMa_times_M.c \
QDP_F3_M_peq_sMa_times_sM.c \
QDP_F3_M_peq_sM_times_M.c \
QDP_F3_M_peq_sM_times_sM.c \
QDP_F3_M_peq_transpose_M.c \
QDP_F3_M_peq_V_times_Va.c \
QDP_F3_M_veq_c_times_M.c \
QDP_F3_M_veq_Ma_times_M.c \
QDP_F3_M_veq_M.c \
QDP_F3_M_veqm_c_times_M.c \
QDP_F3_M_veqm_Ma_times_M.c \
QDP_F3_M_veqm_M.c \
QDP_F3_M_veqm_M_times_M.c \
QDP_F3_M_veqm_r_times_M.c \
QDP_F3_M_veq_M_times_M.c \
QDP_F3_M_veqm_V_times_Va.c \
QDP_F3_M_veq_r_times_M.c \
QDP_F3_M_veq_sM.c \
QDP_F3_M_veq_V_times_Va.c \
QDP_F3_M_vmeq_c_times_M.c \
QDP_F3_M_vmeq_Ma_times_M.c \
QDP_F3_M_vmeq_M.c \
QDP_F3_M_vmeq_M_times_M.c \
QDP_F3_M_vmeq_r_times_M.c \
QDP_F3_M_vmeq_V_times_Va.c \
QDP_F3_M_vpeq_c_times_M.c \
QDP_F3_M_vpeq_Ma_times_M.c \
QDP_F3_M_vpeq_M.c \
QDP_F3_M_vpeq_M_times_M.c \
QDP_F3_M_vpeq_r_times_M.c \
QDP_F3_M_vpeq_V_times_Va.c \
QDP_F3_P_eq_conj_P.c \
QDP_F3_P_eq_c_times_P.c \
QDP_F3_P_eq_c_times_P_minus_P.c \
QDP_F3_P_eq_c_times_P_plus_P.c \
QDP_F3_P_eq_diracvec_D.c \
QDP_F3_P_eq_elem_C.c \
QDP_F3_P_eq_func.c \
QDP_F3_P_eq_gamma_times_P.c \
QDP_F3_P_eq_gaussian_S.c \
QDP_F3_P_eq_i_P.c \
QDP_F3_P_eq_Ma_times_P.c \
QDP_F3_P_eq_Ma_times_sP.c \
QDP_F3_P_eqm_conj_P.c \
QDP_F3_P_eqm_c_times_P.c \
QDP_F3_P_eqm_i_P.c \
QDP_F3_P_eqm_Ma_times_P.c \
QDP_F3_P_eqm_Ma_times_sP.c \
QDP_F3_P_eqm_M_times_P.c \
QDP_F3_P_eqm_M_times_sP.c \
QDP_F3_P_eqm_Pa.c \
QDP_F3_P_eqm_P.c \
QDP_F3_P_eqm_P_times_Ma.c \
QDP_F3_P_eqm_P_times_M.c \
QDP_F3_P_eqm_P_times_P.c \
QDP_F3_P_eqm_r_times_P.c \
QDP_F3_P_eqm_sMa_times_P.c \
QDP_F3_P_eqm_sMa_times_sP.c \
QDP_F3_P_eqm_sM_times_P.c \
QDP_F3_P_eqm_sM_times_sP.c \
QDP_F3_P_eq_M_times_P.c \
QDP_F3_P_eq_M_times_sP.c \
QDP_F3_P_eqm_transpose_P.c \
QDP_F3_P_eq_Pa.c \
QDP_F3_P_eq_p.c \
QDP_F3_P_eq_P.c \
QDP_F3_P_eq_P_mask_I.c \
QDP_F3_P_eq_P_minus_P.c \
QDP_F3_P_eq_P_plus_P.c \
QDP_F3_P_eq_P_times_gamma.c \
QDP_F3_P_eq_P_times_Ma.c \
QDP_F3_P_eq_P_times_M.c \
QDP_F3_P_eq_P_times_P.c \
QDP_F3_P_eq_r_times_P.c \
QDP_F3_P_eq_r_times_P_minus_P.c \
QDP_F3_P_eq_r_times_P_plus_P.c \
QDP_F3_P_eq_sMa_times_P.c \
QDP_F3_P_eq_sMa_times_sP.c \
QDP_F3_P_eq_sM_times_P.c \
QDP_F3_P_eq_sM_times_sP.c \
QDP_F3_P_eq_sP.c \
QDP_F3_p_eq_sum_P.c \
QDP_F3_p_eq_sum_P_multi.c \
QDP_F3_P_eq_transpose_P.c \
QDP_F3_P_eq_zero.c \
QDP_F3_P_meq_conj_P.c \
QDP_F3_P_meq_c_times_P.c \
QDP_F3_P_meq_i_P.c \
QDP_F3_P_meq_Ma_times_P.c \
QDP_F3_P_meq_Ma_times_sP.c \
QDP_F3_P_meq_M_times_P.c \
QDP_F3_P_meq_M_times_sP.c \
QDP_F3_P_meq_Pa.c \
QDP_F3_P_meq_P.c \
QDP_F3_P_meq_P_times_Ma.c \
QDP_F3_P_meq_P_times_M.c \
QDP_F3_P_meq_P_times_P.c \
QDP_F3_P_meq_r_times_P.c \
QDP_F3_P_meq_sMa_times_P.c \
QDP_F3_P_meq_sMa_times_sP.c \
QDP_F3_P_meq_sM_times_P.c \
QDP_F3_P_meq_sM_times_sP.c \
QDP_F3_P_meq_transpose_P.c \
QDP_F3_P_peq_conj_P.c \
QDP_F3_P_peq_c_times_P.c \
QDP_F3_P_peq_i_P.c \
QDP_F3_P_peq_Ma_times_P.c \
QDP_F3_P_peq_Ma_times_sP.c \
QDP_F3_P_peq_M_times_P.c \
QDP_F3_P_peq_M_times_sP.c \
QDP_F3_P_peq_Pa.c \
QDP_F3_P_peq_P.c \
QDP_F3_P_peq_P_times_Ma.c \
QDP_F3_P_peq_P_times_M.c \
QDP_F3_P_peq_P_times_P.c \
QDP_F3_P_peq_r_times_P.c \
QDP_F3_P_peq_sMa_times_P.c \
QDP_F3_P_peq_sMa_times_sP.c \
QDP_F3_P_peq_sM_times_P.c \
QDP_F3_P_peq_sM_times_sP.c \
QDP_F3_P_peq_transpose_P.c \
QDP_F3_P_veq_c_times_P.c \
QDP_F3_P_veq_Ma_times_P.c \
QDP_F3_P_veqm_c_times_P.c \
QDP_F3_P_veqm_Ma_times_P.c \
QDP_F3_P_veqm_M_times_P.c \
QDP_F3_P_veqm_P.c \
QDP_F3_P_veqm_r_times_P.c \
QDP_F3_P_veq_M_times_P.c \
QDP_F3_P_veq_P.c \
QDP_F3_P_veq_r_times_P.c \
QDP_F3_P_veq_sP.c \
QDP_F3_P_vmeq_c_times_P.c \
QDP_F3_P_vmeq_Ma_times_P.c \
QDP_F3_P_vmeq_M_times_P.c \
QDP_F3_P_vmeq_P.c \
QDP_F3_P_vmeq_r_times_P.c \
QDP_F3_P_vpeq_c_times_P.c \
QDP_F3_P_vpeq_Ma_times_P.c \
QDP_F3_P_vpeq_M_times_P.c \
QDP_F3_P_vpeq_P.c \
QDP_F3_P_vpeq_r_times_P.c \
QDP_F3_read_D.c \
QDP_F3_read_H.c \
QDP_F3_read_M.c \
QDP_F3_read_P.c \
QDP_F3_read_V.c \
QDP_F3_R_eq_im_trace_M.c \
QDP_F3_r_eq_norm2_D.c \
QDP_F3_R_eq_norm2_D.c \
QDP_F3_r_eq_norm2_D_multi.c \
QDP_F3_r_eq_norm2_H.c \
QDP_F3_R_eq_norm2_H.c \
QDP_F3_r_eq_norm2_H_multi.c \
QDP_F3_r_eq_norm2_M.c \
QDP_F3_R_eq_norm2_M.c \
QDP_F3_r_eq_norm2_M_multi.c \
QDP_F3_r_eq_norm2_P.c

QDPOBJ1 = \
QDP_F3_c_eq_D_dot_D.o \
QDP_F3_C_eq_D_dot_D.o \
QDP_F3_c_eq_D_dot_D_multi.o \
QDP_F3_C_eq_elem_D.o \
QDP_F3_C_eq_elem_H.o \
QDP_F3_C_eq_elem_M.o \
QDP_F3_C_eq_elem_P.o \
QDP_F3_C_eq_elem_V.o \
QDP_F3_c_eq_H_dot_H.o \
QDP_F3_C_eq_H_dot_H.o \
QDP_F3_c_eq_H_dot_H_multi.o \
QDP_F3_c_eq_M_dot_M.o \
QDP_F3_C_eq_M_dot_M.o \
QDP_F3_c_eq_M_dot_M_multi.o \
QDP_F3_c_eq_P_dot_P.o \
QDP_F3_C_eq_P_dot_P.o \
QDP_F3_c_eq_P_dot_P_multi.o \
QDP_F3_C_eq_trace_M.o \
QDP_F3_c_eq_V_dot_V.o \
QDP_F3_C_eq_V_dot_V.o \
QDP_F3_c_eq_V_dot_V_multi.o \
QDP_F3_create_D.o \
QDP_F3_create_H.o \
QDP_F3_create_M.o \
QDP_F3_create_P.o \
QDP_F3_create_V.o \
QDP_F3_c_veq_D_dot_D.o \
QDP_F3_c_veq_D_dot_D_multi.o \
QDP_F3_c_veq_H_dot_H.o \
QDP_F3_c_veq_H_dot_H_multi.o \
QDP_F3_c_veq_M_dot_M.o \
QDP_F3_c_veq_M_dot_M_multi.o \
QDP_F3_c_veq_P_dot_P.o \
QDP_F3_c_veq_P_dot_P_multi.o \
QDP_F3_c_veq_V_dot_V.o \
QDP_F3_c_veq_V_dot_V_multi.o \
QDP_F3_D_eq_colorvec_V.o \
QDP_F3_D_eq_conj_D.o \
QDP_F3_D_eq_c_times_D.o \
QDP_F3_D_eq_c_times_D_minus_D.o \
QDP_F3_D_eq_c_times_D_plus_D.o \
QDP_F3_D_eq_d.o \
QDP_F3_D_eq_D.o \
QDP_F3_D_eq_diracvec_P.o \
QDP_F3_D_eq_D_mask_I.o \
QDP_F3_D_eq_D_minus_D.o \
QDP_F3_D_eq_D_plus_D.o \
QDP_F3_D_eq_elem_C.o \
QDP_F3_D_eq_func.o \
QDP_F3_D_eq_gamma_times_D.o \
QDP_F3_D_eq_gaussian_S.o \
QDP_F3_D_eq_i_D.o \
QDP_F3_D_eq_Ma_times_D.o \
QDP_F3_D_eq_Ma_times_sD.o \
QDP_F3_D_eqm_conj_D.o \
QDP_F3_D_eqm_c_times_D.o \
QDP_F3_D_eqm_D.o \
QDP_F3_D_eqm_i_D.o \
QDP_F3_D_eqm_Ma_times_D.o \
QDP_F3_D_eqm_Ma_times_sD.o \
QDP_F3_D_eqm_M_times_D.o \
QDP_F3_D_eqm_M_times_sD.o \
QDP_F3_D_eqm_r_times_D.o \
QDP_F3_D_eqm_sMa_times_D.o \
QDP_F3_D_eqm_sMa_times_sD.o \
QDP_F3_D_eqm_sM_times_D.o \
QDP_F3_D_eqm_sM_times_sD.o \
QDP_F3_D_eqm_sprecon_H.o \
QDP_F3_D_eqm_sprecon_M_times_H.o \
QDP_F3_D_eq_M_times_D.o \
QDP_F3_D_eq_M_times_sD.o \
QDP_F3_D_eqm_wilsonspin_M_times_D.o \
QDP_F3_D_eq_r_times_D.o \
QDP_F3_D_eq_r_times_D_minus_D.o \
QDP_F3_D_eq_r_times_D_plus_D.o \
QDP_F3_D_eq_sD.o \
QDP_F3_D_eq_sMa_times_D.o \
QDP_F3_D_eq_sMa_times_sD.o \
QDP_F3_D_eq_sM_times_D.o \
QDP_F3_D_eq_sM_times_sD.o \
QDP_F3_D_eq_sprecon_H.o \
QDP_F3_D_eq_sprecon_M_times_H.o \
QDP_F3_d_eq_sum_D.o \
QDP_F3_d_eq_sum_D_multi.o \
QDP_F3_D_eq_wilsonspin_M_times_D.o \
QDP_F3_D_eq_zero.o \
QDP_F3_discard_D.o \
QDP_F3_discard_H.o \
QDP_F3_discard_M.o \
QDP_F3_discard_P.o \
QDP_F3_discard_V.o \
QDP_F3_D_meq_conj_D.o \
QDP_F3_D_meq_c_times_D.o \
QDP_F3_D_meq_D.o \
QDP_F3_D_meq_i_D.o \
QDP_F3_D_meq_Ma_times_D.o \
QDP_F3_D_meq_Ma_times_sD.o \
QDP_F3_D_meq_M_times_D.o \
QDP_F3_D_meq_M_times_sD.o \
QDP_F3_D_meq_r_times_D.o \
QDP_F3_D_meq_sMa_times_D.o \
QDP_F3_D_meq_sMa_times_sD.o \
QDP_F3_D_meq_sM_times_D.o \
QDP_F3_D_meq_sM_times_sD.o \
QDP_F3_D_meq_sprecon_H.o \
QDP_F3_D_meq_sprecon_M_times_H.o \
QDP_F3_D_meq_wilsonspin_M_times_D.o \
QDP_F3_D_peq_conj_D.o \
QDP_F3_D_peq_c_times_D.o \
QDP_F3_D_peq_D.o \
QDP_F3_D_peq_i_D.o \
QDP_F3_D_peq_Ma_times_D.o \
QDP_F3_D_peq_Ma_times_sD.o \
QDP_F3_D_peq_M_times_D.o \
QDP_F3_D_peq_M_times_sD.o \
QDP_F3_D_peq_r_times_D.o \
QDP_F3_D_peq_sMa_times_D.o \
QDP_F3_D_peq_sMa_times_sD.o \
QDP_F3_D_peq_sM_times_D.o \
QDP_F3_D_peq_sM_times_sD.o \
QDP_F3_D_peq_sprecon_H.o \
QDP_F3_D_peq_sprecon_M_times_H.o \
QDP_F3_D_peq_wilsonspin_M_times_D.o \
QDP_F3_D_veq_c_times_D.o \
QDP_F3_D_veq_D.o \
QDP_F3_D_veq_Ma_times_D.o \
QDP_F3_D_veqm_c_times_D.o \
QDP_F3_D_veqm_D.o \
QDP_F3_D_veqm_Ma_times_D.o \
QDP_F3_D_veqm_M_times_D.o \
QDP_F3_D_veqm_r_times_D.o \
QDP_F3_D_veqm_sprecon_H.o \
QDP_F3_D_veqm_sprecon_M_times_H.o \
QDP_F3_D_veq_M_times_D.o \
QDP_F3_D_veqm_wilsonspin_M_times_D.o \
QDP_F3_D_veq_r_times_D.o \
QDP_F3_D_veq_sD.o \
QDP_F3_D_veq_sprecon_H.o \
QDP_F3_D_veq_sprecon_M_times_H.o \
QDP_F3_D_veq_wilsonspin_M_times_D.o \
QDP_F3_D_vmeq_c_times_D.o \
QDP_F3_D_vmeq_D.o \
QDP_F3_D_vmeq_Ma_times_D.o \
QDP_F3_D_vmeq_M_times_D.o \
QDP_F3_D_vmeq_r_times_D.o \
QDP_F3_D_vmeq_sprecon_H.o \
QDP_F3_D_vmeq_sprecon_M_times_H.o \
QDP_F3_D_vmeq_wilsonspin_M_times_D.o \
QDP_F3_D_vpeq_c_times_D.o \
QDP_F3_D_vpeq_D.o \
QDP_F3_D_vpeq_Ma_times_D.o \
QDP_F3_D_vpeq_M_times_D.o \
QDP_F3_D_vpeq_r_times_D.o \
QDP_F3_D_vpeq_sprecon_H.o \
QDP_F3_D_vpeq_sprecon_M_times_H.o \
QDP_F3_D_vpeq_wilsonspin_M_times_D.o \
QDP_F3_expose_D.o \
QDP_F3_expose_H.o \
QDP_F3_expose_M.o \
QDP_F3_expose_P.o \
QDP_F3_expose_V.o \
QDP_F3_extract_D.o \
QDP_F3_extract_H.o \
QDP_F3_extract_M.o \
QDP_F3_extract_P.o \
QDP_F3_extract_V.o \
QDP_F3_H_eq_colorvec_V.o \
QDP_F3_H_eq_conj_H.o \
QDP_F3_H_eq_c_times_H.o \
QDP_F3_H_eq_c_times_H_minus_H.o \
QDP_F3_H_eq_c_times_H_plus_H.o \
QDP_F3_H_eq_elem_C.o \
QDP_F3_H_eq_func.o \
QDP_F3_H_eq_gaussian_S.o \
QDP_F3_H_eq_h.o \
QDP_F3_H_eq_H.o \
QDP_F3_H_eq_H_mask_I.o \
QDP_F3_H_eq_H_minus_H.o \
QDP_F3_H_eq_H_plus_H.o \
QDP_F3_H_eq_i_H.o \
QDP_F3_H_eq_Ma_times_H.o \
QDP_F3_H_eq_Ma_times_sH.o \
QDP_F3_H_eqm_conj_H.o \
QDP_F3_H_eqm_c_times_H.o \
QDP_F3_H_eqm_H.o \
QDP_F3_H_eqm_i_H.o \
QDP_F3_H_eqm_Ma_times_H.o \
QDP_F3_H_eqm_Ma_times_sH.o \
QDP_F3_H_eqm_M_times_H.o \
QDP_F3_H_eqm_M_times_sH.o \
QDP_F3_H_eqm_r_times_H.o \
QDP_F3_H_eqm_sMa_times_H.o \
QDP_F3_H_eqm_sMa_times_sH.o \
QDP_F3_H_eqm_sM_times_H.o \
QDP_F3_H_eqm_sM_times_sH.o \
QDP_F3_H_eq_M_times_H.o \
QDP_F3_H_eq_M_times_sH.o \
QDP_F3_H_eq_r_times_H.o \
QDP_F3_H_eq_r_times_H_minus_H.o \
QDP_F3_H_eq_r_times_H_plus_H.o \
QDP_F3_H_eq_sH.o \
QDP_F3_H_eq_sMa_times_H.o \
QDP_F3_H_eq_sMa_times_sH.o \
QDP_F3_H_eq_sM_times_H.o \
QDP_F3_H_eq_sM_times_sH.o \
QDP_F3_H_eq_spproj_D.o \
QDP_F3_h_eq_sum_H.o \
QDP_F3_h_eq_sum_H_multi.o \
QDP_F3_H_eq_zero.o \
QDP_F3_H_meq_conj_H.o \
QDP_F3_H_meq_c_times_H.o \
QDP_F3_H_meq_H.o \
QDP_F3_H_meq_i_H.o \
QDP_F3_H_meq_Ma_times_H.o \
QDP_F3_H_meq_Ma_times_sH.o \
QDP_F3_H_meq_M_times_H.o \
QDP_F3_H_meq_M_times_sH.o \
QDP_F3_H_meq_r_times_H.o \
QDP_F3_H_meq_sMa_times_H.o \
QDP_F3_H_meq_sMa_times_sH.o \
QDP_F3_H_meq_sM_times_H.o \
QDP_F3_H_meq_sM_times_sH.o \
QDP_F3_H_peq_conj_H.o \
QDP_F3_H_peq_c_times_H.o \
QDP_F3_H_peq_H.o \
QDP_F3_H_peq_i_H.o \
QDP_F3_H_peq_Ma_times_H.o \
QDP_F3_H_peq_Ma_times_sH.o \
QDP_F3_H_peq_M_times_H.o \
QDP_F3_H_peq_M_times_sH.o \
QDP_F3_H_peq_r_times_H.o \
QDP_F3_H_peq_sMa_times_H.o \
QDP_F3_H_peq_sMa_times_sH.o \
QDP_F3_H_peq_sM_times_H.o \
QDP_F3_H_peq_sM_times_sH.o \
QDP_F3_H_veq_c_times_H.o \
QDP_F3_H_veq_H.o \
QDP_F3_H_veq_Ma_times_H.o \
QDP_F3_H_veqm_c_times_H.o \
QDP_F3_H_veqm_H.o \
QDP_F3_H_veqm_Ma_times_H.o \
QDP_F3_H_veqm_M_times_H.o \
QDP_F3_H_veqm_r_times_H.o \
QDP_F3_H_veq_M_times_H.o \
QDP_F3_H_veq_r_times_H.o \
QDP_F3_H_veq_sH.o \
QDP_F3_H_veq_spproj_D.o \
QDP_F3_H_vmeq_c_times_H.o \
QDP_F3_H_vmeq_H.o \
QDP_F3_H_vmeq_Ma_times_H.o \
QDP_F3_H_vmeq_M_times_H.o \
QDP_F3_H_vmeq_r_times_H.o \
QDP_F3_H_vpeq_c_times_H.o \
QDP_F3_H_vpeq_H.o \
QDP_F3_H_vpeq_Ma_times_H.o \
QDP_F3_H_vpeq_M_times_H.o \
QDP_F3_H_vpeq_r_times_H.o \
QDP_F3_M_eq_antiherm_M.o \
QDP_F3_M_eq_c.o \
QDP_F3_M_eq_colorvec_V.o \
QDP_F3_M_eq_conj_M.o \
QDP_F3_M_eq_c_times_M.o \
QDP_F3_M_eq_c_times_M_minus_M.o \
QDP_F3_M_eq_c_times_M_plus_M.o \
QDP_F3_M_eq_elem_C.o \
QDP_F3_M_eq_func.o \
QDP_F3_M_eq_gaussian_S.o \
QDP_F3_M_eq_i_M.o \
QDP_F3_M_eq_Ma.o \
QDP_F3_M_eq_Ma_times_Ma.o \
QDP_F3_M_eq_Ma_times_M.o \
QDP_F3_M_eq_Ma_times_sM.o \
QDP_F3_M_eq_m.o \
QDP_F3_M_eq_M.o \
QDP_F3_M_eqm_conj_M.o \
QDP_F3_M_eqm_c_times_M.o \
QDP_F3_M_eqm_i_M.o \
QDP_F3_M_eqm_Ma.o \
QDP_F3_M_eq_M_mask_I.o \
QDP_F3_M_eqm_Ma_times_Ma.o \
QDP_F3_M_eqm_Ma_times_M.o \
QDP_F3_M_eqm_Ma_times_sM.o \
QDP_F3_M_eqm_M.o \
QDP_F3_M_eq_M_minus_M.o \
QDP_F3_M_eqm_M_times_Ma.o \
QDP_F3_M_eqm_M_times_M.o \
QDP_F3_M_eqm_M_times_sM.o \
QDP_F3_M_eq_M_plus_M.o \
QDP_F3_M_eqm_r_times_M.o \
QDP_F3_M_eqm_sMa_times_M.o \
QDP_F3_M_eqm_sMa_times_sM.o \
QDP_F3_M_eqm_sM_times_M.o \
QDP_F3_M_eqm_sM_times_sM.o \
QDP_F3_M_eq_M_times_Ma.o \
QDP_F3_M_eq_M_times_M.o \
QDP_F3_M_eq_M_times_sM.o \
QDP_F3_M_eqm_transpose_M.o \
QDP_F3_M_eqm_V_times_Va.o \
QDP_F3_M_eq_r_times_M.o \
QDP_F3_M_eq_r_times_M_minus_M.o \
QDP_F3_M_eq_r_times_M_plus_M.o \
QDP_F3_M_eq_sMa_times_M.o \
QDP_F3_M_eq_sMa_times_sM.o \
QDP_F3_M_eq_sM.o \
QDP_F3_M_eq_sM_times_M.o \
QDP_F3_M_eq_sM_times_sM.o \
QDP_F3_M_eq_spintrace_P.o \
QDP_F3_m_eq_sum_M.o \
QDP_F3_m_eq_sum_M_multi.o \
QDP_F3_M_eq_transpose_M.o \
QDP_F3_M_eq_V_times_Va.o \
QDP_F3_M_eq_zero.o \
QDP_F3_M_meq_conj_M.o \
QDP_F3_M_meq_c_times_M.o \
QDP_F3_M_meq_i_M.o \
QDP_F3_M_meq_Ma.o \
QDP_F3_M_meq_Ma_times_Ma.o \
QDP_F3_M_meq_Ma_times_M.o \
QDP_F3_M_meq_Ma_times_sM.o \
QDP_F3_M_meq_M.o \
QDP_F3_M_meq_M_times_Ma.o \
QDP_F3_M_meq_M_times_M.o \
QDP_F3_M_meq_M_times_sM.o \
QDP_F3_M_meq_r_times_M.o \
QDP_F3_M_meq_sMa_times_M.o \
QDP_F3_M_meq_sMa_times_sM.o \
QDP_F3_M_meq_sM_times_M.o \
QDP_F3_M_meq_sM_times_sM.o \
QDP_F3_M_meq_transpose_M.o \
QDP_F3_M_meq_V_times_Va.o \
QDP_F3_M_peq_conj_M.o \
QDP_F3_M_peq_c_times_M.o \
QDP_F3_M_peq_i_M.o \
QDP_F3_M_peq_Ma.o \
QDP_F3_M_peq_Ma_times_Ma.o \
QDP_F3_M_peq_Ma_times_M.o \
QDP_F3_M_peq_Ma_times_sM.o \
QDP_F3_M_peq_M.o \
QDP_F3_M_peq_M_times_Ma.o \
QDP_F3_M_peq_M_times_M.o \
QDP_F3_M_peq_M_times_sM.o \
QDP_F3_M_peq_r_times_M.o \
QDP_F3_M_peq_sMa_times_M.o \
QDP_F3_M_peq_sMa_times_sM.o \
QDP_F3_M_peq_sM_times_M.o \
QDP_F3_M_peq_sM_times_sM.o \
QDP_F3_M_peq_transpose_M.o \
QDP_F3_M_peq_V_times_Va.o \
QDP_F3_M_veq_c_times_M.o \
QDP_F3_M_veq_Ma_times_M.o \
QDP_F3_M_veq_M.o \
QDP_F3_M_veqm_c_times_M.o \
QDP_F3_M_veqm_Ma_times_M.o \
QDP_F3_M_veqm_M.o \
QDP_F3_M_veqm_M_times_M.o \
QDP_F3_M_veqm_r_times_M.o \
QDP_F3_M_veq_M_times_M.o \
QDP_F3_M_veqm_V_times_Va.o \
QDP_F3_M_veq_r_times_M.o \
QDP_F3_M_veq_sM.o \
QDP_F3_M_veq_V_times_Va.o \
QDP_F3_M_vmeq_c_times_M.o \
QDP_F3_M_vmeq_Ma_times_M.o \
QDP_F3_M_vmeq_M.o \
QDP_F3_M_vmeq_M_times_M.o \
QDP_F3_M_vmeq_r_times_M.o \
QDP_F3_M_vmeq_V_times_Va.o \
QDP_F3_M_vpeq_c_times_M.o \
QDP_F3_M_vpeq_Ma_times_M.o \
QDP_F3_M_vpeq_M.o \
QDP_F3_M_vpeq_M_times_M.o \
QDP_F3_M_vpeq_r_times_M.o \
QDP_F3_M_vpeq_V_times_Va.o \
QDP_F3_P_eq_conj_P.o \
QDP_F3_P_eq_c_times_P.o \
QDP_F3_P_eq_c_times_P_minus_P.o \
QDP_F3_P_eq_c_times_P_plus_P.o \
QDP_F3_P_eq_diracvec_D.o \
QDP_F3_P_eq_elem_C.o \
QDP_F3_P_eq_func.o \
QDP_F3_P_eq_gamma_times_P.o \
QDP_F3_P_eq_gaussian_S.o \
QDP_F3_P_eq_i_P.o \
QDP_F3_P_eq_Ma_times_P.o \
QDP_F3_P_eq_Ma_times_sP.o \
QDP_F3_P_eqm_conj_P.o \
QDP_F3_P_eqm_c_times_P.o \
QDP_F3_P_eqm_i_P.o \
QDP_F3_P_eqm_Ma_times_P.o \
QDP_F3_P_eqm_Ma_times_sP.o \
QDP_F3_P_eqm_M_times_P.o \
QDP_F3_P_eqm_M_times_sP.o \
QDP_F3_P_eqm_Pa.o \
QDP_F3_P_eqm_P.o \
QDP_F3_P_eqm_P_times_Ma.o \
QDP_F3_P_eqm_P_times_M.o \
QDP_F3_P_eqm_P_times_P.o \
QDP_F3_P_eqm_r_times_P.o \
QDP_F3_P_eqm_sMa_times_P.o \
QDP_F3_P_eqm_sMa_times_sP.o \
QDP_F3_P_eqm_sM_times_P.o \
QDP_F3_P_eqm_sM_times_sP.o \
QDP_F3_P_eq_M_times_P.o \
QDP_F3_P_eq_M_times_sP.o \
QDP_F3_P_eqm_transpose_P.o \
QDP_F3_P_eq_Pa.o \
QDP_F3_P_eq_p.o \
QDP_F3_P_eq_P.o \
QDP_F3_P_eq_P_mask_I.o \
QDP_F3_P_eq_P_minus_P.o \
QDP_F3_P_eq_P_plus_P.o \
QDP_F3_P_eq_P_times_gamma.o \
QDP_F3_P_eq_P_times_Ma.o \
QDP_F3_P_eq_P_times_M.o \
QDP_F3_P_eq_P_times_P.o \
QDP_F3_P_eq_r_times_P.o \
QDP_F3_P_eq_r_times_P_minus_P.o \
QDP_F3_P_eq_r_times_P_plus_P.o \
QDP_F3_P_eq_sMa_times_P.o \
QDP_F3_P_eq_sMa_times_sP.o \
QDP_F3_P_eq_sM_times_P.o \
QDP_F3_P_eq_sM_times_sP.o \
QDP_F3_P_eq_sP.o \
QDP_F3_p_eq_sum_P.o \
QDP_F3_p_eq_sum_P_multi.o \
QDP_F3_P_eq_transpose_P.o \
QDP_F3_P_eq_zero.o \
QDP_F3_P_meq_conj_P.o \
QDP_F3_P_meq_c_times_P.o \
QDP_F3_P_meq_i_P.o \
QDP_F3_P_meq_Ma_times_P.o \
QDP_F3_P_meq_Ma_times_sP.o \
QDP_F3_P_meq_M_times_P.o \
QDP_F3_P_meq_M_times_sP.o \
QDP_F3_P_meq_Pa.o \
QDP_F3_P_meq_P.o \
QDP_F3_P_meq_P_times_Ma.o \
QDP_F3_P_meq_P_times_M.o \
QDP_F3_P_meq_P_times_P.o \
QDP_F3_P_meq_r_times_P.o \
QDP_F3_P_meq_sMa_times_P.o \
QDP_F3_P_meq_sMa_times_sP.o \
QDP_F3_P_meq_sM_times_P.o \
QDP_F3_P_meq_sM_times_sP.o \
QDP_F3_P_meq_transpose_P.o \
QDP_F3_P_peq_conj_P.o \
QDP_F3_P_peq_c_times_P.o \
QDP_F3_P_peq_i_P.o \
QDP_F3_P_peq_Ma_times_P.o \
QDP_F3_P_peq_Ma_times_sP.o \
QDP_F3_P_peq_M_times_P.o \
QDP_F3_P_peq_M_times_sP.o \
QDP_F3_P_peq_Pa.o \
QDP_F3_P_peq_P.o \
QDP_F3_P_peq_P_times_Ma.o \
QDP_F3_P_peq_P_times_M.o \
QDP_F3_P_peq_P_times_P.o \
QDP_F3_P_peq_r_times_P.o \
QDP_F3_P_peq_sMa_times_P.o \
QDP_F3_P_peq_sMa_times_sP.o \
QDP_F3_P_peq_sM_times_P.o \
QDP_F3_P_peq_sM_times_sP.o \
QDP_F3_P_peq_transpose_P.o \
QDP_F3_P_veq_c_times_P.o \
QDP_F3_P_veq_Ma_times_P.o \
QDP_F3_P_veqm_c_times_P.o \
QDP_F3_P_veqm_Ma_times_P.o \
QDP_F3_P_veqm_M_times_P.o \
QDP_F3_P_veqm_P.o \
QDP_F3_P_veqm_r_times_P.o \
QDP_F3_P_veq_M_times_P.o \
QDP_F3_P_veq_P.o \
QDP_F3_P_veq_r_times_P.o \
QDP_F3_P_veq_sP.o \
QDP_F3_P_vmeq_c_times_P.o \
QDP_F3_P_vmeq_Ma_times_P.o \
QDP_F3_P_vmeq_M_times_P.o \
QDP_F3_P_vmeq_P.o \
QDP_F3_P_vmeq_r_times_P.o \
QDP_F3_P_vpeq_c_times_P.o \
QDP_F3_P_vpeq_Ma_times_P.o \
QDP_F3_P_vpeq_M_times_P.o \
QDP_F3_P_vpeq_P.o \
QDP_F3_P_vpeq_r_times_P.o \
QDP_F3_read_D.o \
QDP_F3_read_H.o \
QDP_F3_read_M.o \
QDP_F3_read_P.o \
QDP_F3_read_V.o \
QDP_F3_R_eq_im_trace_M.o \
QDP_F3_r_eq_norm2_D.o \
QDP_F3_R_eq_norm2_D.o \
QDP_F3_r_eq_norm2_D_multi.o \
QDP_F3_r_eq_norm2_H.o \
QDP_F3_R_eq_norm2_H.o \
QDP_F3_r_eq_norm2_H_multi.o \
QDP_F3_r_eq_norm2_M.o \
QDP_F3_R_eq_norm2_M.o \
QDP_F3_r_eq_norm2_M_multi.o \
QDP_F3_r_eq_norm2_P.o

QDPSRC2 = \
QDP_F3_R_eq_norm2_P.c \
QDP_F3_r_eq_norm2_P_multi.c \
QDP_F3_r_eq_norm2_V.c \
QDP_F3_R_eq_norm2_V.c \
QDP_F3_r_eq_norm2_V_multi.c \
QDP_F3_r_eq_re_D_dot_D.c \
QDP_F3_R_eq_re_D_dot_D.c \
QDP_F3_r_eq_re_D_dot_D_multi.c \
QDP_F3_r_eq_re_H_dot_H.c \
QDP_F3_R_eq_re_H_dot_H.c \
QDP_F3_r_eq_re_H_dot_H_multi.c \
QDP_F3_r_eq_re_M_dot_M.c \
QDP_F3_R_eq_re_M_dot_M.c \
QDP_F3_r_eq_re_M_dot_M_multi.c \
QDP_F3_r_eq_re_P_dot_P.c \
QDP_F3_R_eq_re_P_dot_P.c \
QDP_F3_r_eq_re_P_dot_P_multi.c \
QDP_F3_R_eq_re_trace_M.c \
QDP_F3_r_eq_re_V_dot_V.c \
QDP_F3_R_eq_re_V_dot_V.c \
QDP_F3_r_eq_re_V_dot_V_multi.c \
QDP_F3_r_veq_norm2_D.c \
QDP_F3_r_veq_norm2_D_multi.c \
QDP_F3_r_veq_norm2_H.c \
QDP_F3_r_veq_norm2_H_multi.c \
QDP_F3_r_veq_norm2_M.c \
QDP_F3_r_veq_norm2_M_multi.c \
QDP_F3_r_veq_norm2_P.c \
QDP_F3_r_veq_norm2_P_multi.c \
QDP_F3_r_veq_norm2_V.c \
QDP_F3_r_veq_norm2_V_multi.c \
QDP_F3_r_veq_re_D_dot_D.c \
QDP_F3_r_veq_re_D_dot_D_multi.c \
QDP_F3_r_veq_re_H_dot_H.c \
QDP_F3_r_veq_re_H_dot_H_multi.c \
QDP_F3_r_veq_re_M_dot_M.c \
QDP_F3_r_veq_re_M_dot_M_multi.c \
QDP_F3_r_veq_re_P_dot_P.c \
QDP_F3_r_veq_re_P_dot_P_multi.c \
QDP_F3_r_veq_re_V_dot_V.c \
QDP_F3_r_veq_re_V_dot_V_multi.c \
QDP_F3_V_eq_colorvec_D.c \
QDP_F3_V_eq_colorvec_H.c \
QDP_F3_V_eq_colorvec_M.c \
QDP_F3_V_eq_conj_V.c \
QDP_F3_V_eq_c_times_V.c \
QDP_F3_V_eq_c_times_V_minus_V.c \
QDP_F3_V_eq_c_times_V_plus_V.c \
QDP_F3_V_eq_elem_C.c \
QDP_F3_V_eq_func.c \
QDP_F3_V_eq_gaussian_S.c \
QDP_F3_V_eq_i_V.c \
QDP_F3_V_eq_Ma_times_sV.c \
QDP_F3_V_eq_Ma_times_V.c \
QDP_F3_V_eqm_conj_V.c \
QDP_F3_V_eqm_c_times_V.c \
QDP_F3_V_eqm_i_V.c \
QDP_F3_V_eqm_Ma_times_sV.c \
QDP_F3_V_eqm_Ma_times_V.c \
QDP_F3_V_eqm_M_times_sV.c \
QDP_F3_V_eqm_M_times_V.c \
QDP_F3_V_eqm_r_times_V.c \
QDP_F3_V_eqm_sMa_times_sV.c \
QDP_F3_V_eqm_sMa_times_V.c \
QDP_F3_V_eqm_sM_times_sV.c \
QDP_F3_V_eqm_sM_times_V.c \
QDP_F3_V_eq_M_times_sV.c \
QDP_F3_V_eq_M_times_V.c \
QDP_F3_V_eqm_V.c \
QDP_F3_V_eq_r_times_V.c \
QDP_F3_V_eq_r_times_V_minus_V.c \
QDP_F3_V_eq_r_times_V_plus_V.c \
QDP_F3_V_eq_sMa_times_sV.c \
QDP_F3_V_eq_sMa_times_V.c \
QDP_F3_V_eq_sM_times_sV.c \
QDP_F3_V_eq_sM_times_V.c \
QDP_F3_v_eq_sum_V.c \
QDP_F3_v_eq_sum_V_multi.c \
QDP_F3_V_eq_sV.c \
QDP_F3_V_eq_v.c \
QDP_F3_V_eq_V.c \
QDP_F3_V_eq_V_mask_I.c \
QDP_F3_V_eq_V_minus_V.c \
QDP_F3_V_eq_V_plus_V.c \
QDP_F3_V_eq_zero.c \
QDP_F3_V_meq_conj_V.c \
QDP_F3_V_meq_c_times_V.c \
QDP_F3_V_meq_i_V.c \
QDP_F3_V_meq_Ma_times_sV.c \
QDP_F3_V_meq_Ma_times_V.c \
QDP_F3_V_meq_M_times_sV.c \
QDP_F3_V_meq_M_times_V.c \
QDP_F3_V_meq_r_times_V.c \
QDP_F3_V_meq_sMa_times_sV.c \
QDP_F3_V_meq_sMa_times_V.c \
QDP_F3_V_meq_sM_times_sV.c \
QDP_F3_V_meq_sM_times_V.c \
QDP_F3_V_meq_V.c \
QDP_F3_V_peq_conj_V.c \
QDP_F3_V_peq_c_times_V.c \
QDP_F3_V_peq_i_V.c \
QDP_F3_V_peq_Ma_times_sV.c \
QDP_F3_V_peq_Ma_times_V.c \
QDP_F3_V_peq_M_times_sV.c \
QDP_F3_V_peq_M_times_V.c \
QDP_F3_V_peq_r_times_V.c \
QDP_F3_V_peq_sMa_times_sV.c \
QDP_F3_V_peq_sMa_times_V.c \
QDP_F3_V_peq_sM_times_sV.c \
QDP_F3_V_peq_sM_times_V.c \
QDP_F3_V_peq_V.c \
QDP_F3_V_veq_c_times_V.c \
QDP_F3_V_veq_Ma_times_V.c \
QDP_F3_V_veqm_c_times_V.c \
QDP_F3_V_veqm_Ma_times_V.c \
QDP_F3_V_veqm_M_times_V.c \
QDP_F3_V_veqm_r_times_V.c \
QDP_F3_V_veq_M_times_V.c \
QDP_F3_V_veqm_V.c \
QDP_F3_V_veq_r_times_V.c \
QDP_F3_V_veq_sV.c \
QDP_F3_V_veq_V.c \
QDP_F3_V_vmeq_c_times_V.c \
QDP_F3_V_vmeq_Ma_times_V.c \
QDP_F3_V_vmeq_M_times_V.c \
QDP_F3_V_vmeq_r_times_V.c \
QDP_F3_V_vmeq_V.c \
QDP_F3_V_vpeq_c_times_V.c \
QDP_F3_V_vpeq_Ma_times_V.c \
QDP_F3_V_vpeq_M_times_V.c \
QDP_F3_V_vpeq_r_times_V.c \
QDP_F3_V_vpeq_V.c \
QDP_F3_write_D.c \
QDP_F3_write_H.c \
QDP_F3_write_M.c \
QDP_F3_write_P.c \
QDP_F3_write_V.c

QDPOBJ2 = \
QDP_F3_R_eq_norm2_P.o \
QDP_F3_r_eq_norm2_P_multi.o \
QDP_F3_r_eq_norm2_V.o \
QDP_F3_R_eq_norm2_V.o \
QDP_F3_r_eq_norm2_V_multi.o \
QDP_F3_r_eq_re_D_dot_D.o \
QDP_F3_R_eq_re_D_dot_D.o \
QDP_F3_r_eq_re_D_dot_D_multi.o \
QDP_F3_r_eq_re_H_dot_H.o \
QDP_F3_R_eq_re_H_dot_H.o \
QDP_F3_r_eq_re_H_dot_H_multi.o \
QDP_F3_r_eq_re_M_dot_M.o \
QDP_F3_R_eq_re_M_dot_M.o \
QDP_F3_r_eq_re_M_dot_M_multi.o \
QDP_F3_r_eq_re_P_dot_P.o \
QDP_F3_R_eq_re_P_dot_P.o \
QDP_F3_r_eq_re_P_dot_P_multi.o \
QDP_F3_R_eq_re_trace_M.o \
QDP_F3_r_eq_re_V_dot_V.o \
QDP_F3_R_eq_re_V_dot_V.o \
QDP_F3_r_eq_re_V_dot_V_multi.o \
QDP_F3_r_veq_norm2_D.o \
QDP_F3_r_veq_norm2_D_multi.o \
QDP_F3_r_veq_norm2_H.o \
QDP_F3_r_veq_norm2_H_multi.o \
QDP_F3_r_veq_norm2_M.o \
QDP_F3_r_veq_norm2_M_multi.o \
QDP_F3_r_veq_norm2_P.o \
QDP_F3_r_veq_norm2_P_multi.o \
QDP_F3_r_veq_norm2_V.o \
QDP_F3_r_veq_norm2_V_multi.o \
QDP_F3_r_veq_re_D_dot_D.o \
QDP_F3_r_veq_re_D_dot_D_multi.o \
QDP_F3_r_veq_re_H_dot_H.o \
QDP_F3_r_veq_re_H_dot_H_multi.o \
QDP_F3_r_veq_re_M_dot_M.o \
QDP_F3_r_veq_re_M_dot_M_multi.o \
QDP_F3_r_veq_re_P_dot_P.o \
QDP_F3_r_veq_re_P_dot_P_multi.o \
QDP_F3_r_veq_re_V_dot_V.o \
QDP_F3_r_veq_re_V_dot_V_multi.o \
QDP_F3_V_eq_colorvec_D.o \
QDP_F3_V_eq_colorvec_H.o \
QDP_F3_V_eq_colorvec_M.o \
QDP_F3_V_eq_conj_V.o \
QDP_F3_V_eq_c_times_V.o \
QDP_F3_V_eq_c_times_V_minus_V.o \
QDP_F3_V_eq_c_times_V_plus_V.o \
QDP_F3_V_eq_elem_C.o \
QDP_F3_V_eq_func.o \
QDP_F3_V_eq_gaussian_S.o \
QDP_F3_V_eq_i_V.o \
QDP_F3_V_eq_Ma_times_sV.o \
QDP_F3_V_eq_Ma_times_V.o \
QDP_F3_V_eqm_conj_V.o \
QDP_F3_V_eqm_c_times_V.o \
QDP_F3_V_eqm_i_V.o \
QDP_F3_V_eqm_Ma_times_sV.o \
QDP_F3_V_eqm_Ma_times_V.o \
QDP_F3_V_eqm_M_times_sV.o \
QDP_F3_V_eqm_M_times_V.o \
QDP_F3_V_eqm_r_times_V.o \
QDP_F3_V_eqm_sMa_times_sV.o \
QDP_F3_V_eqm_sMa_times_V.o \
QDP_F3_V_eqm_sM_times_sV.o \
QDP_F3_V_eqm_sM_times_V.o \
QDP_F3_V_eq_M_times_sV.o \
QDP_F3_V_eq_M_times_V.o \
QDP_F3_V_eqm_V.o \
QDP_F3_V_eq_r_times_V.o \
QDP_F3_V_eq_r_times_V_minus_V.o \
QDP_F3_V_eq_r_times_V_plus_V.o \
QDP_F3_V_eq_sMa_times_sV.o \
QDP_F3_V_eq_sMa_times_V.o \
QDP_F3_V_eq_sM_times_sV.o \
QDP_F3_V_eq_sM_times_V.o \
QDP_F3_v_eq_sum_V.o \
QDP_F3_v_eq_sum_V_multi.o \
QDP_F3_V_eq_sV.o \
QDP_F3_V_eq_v.o \
QDP_F3_V_eq_V.o \
QDP_F3_V_eq_V_mask_I.o \
QDP_F3_V_eq_V_minus_V.o \
QDP_F3_V_eq_V_plus_V.o \
QDP_F3_V_eq_zero.o \
QDP_F3_V_meq_conj_V.o \
QDP_F3_V_meq_c_times_V.o \
QDP_F3_V_meq_i_V.o \
QDP_F3_V_meq_Ma_times_sV.o \
QDP_F3_V_meq_Ma_times_V.o \
QDP_F3_V_meq_M_times_sV.o \
QDP_F3_V_meq_M_times_V.o \
QDP_F3_V_meq_r_times_V.o \
QDP_F3_V_meq_sMa_times_sV.o \
QDP_F3_V_meq_sMa_times_V.o \
QDP_F3_V_meq_sM_times_sV.o \
QDP_F3_V_meq_sM_times_V.o \
QDP_F3_V_meq_V.o \
QDP_F3_V_peq_conj_V.o \
QDP_F3_V_peq_c_times_V.o \
QDP_F3_V_peq_i_V.o \
QDP_F3_V_peq_Ma_times_sV.o \
QDP_F3_V_peq_Ma_times_V.o \
QDP_F3_V_peq_M_times_sV.o \
QDP_F3_V_peq_M_times_V.o \
QDP_F3_V_peq_r_times_V.o \
QDP_F3_V_peq_sMa_times_sV.o \
QDP_F3_V_peq_sMa_times_V.o \
QDP_F3_V_peq_sM_times_sV.o \
QDP_F3_V_peq_sM_times_V.o \
QDP_F3_V_peq_V.o \
QDP_F3_V_veq_c_times_V.o \
QDP_F3_V_veq_Ma_times_V.o \
QDP_F3_V_veqm_c_times_V.o \
QDP_F3_V_veqm_Ma_times_V.o \
QDP_F3_V_veqm_M_times_V.o \
QDP_F3_V_veqm_r_times_V.o \
QDP_F3_V_veq_M_times_V.o \
QDP_F3_V_veqm_V.o \
QDP_F3_V_veq_r_times_V.o \
QDP_F3_V_veq_sV.o \
QDP_F3_V_veq_V.o \
QDP_F3_V_vmeq_c_times_V.o \
QDP_F3_V_vmeq_Ma_times_V.o \
QDP_F3_V_vmeq_M_times_V.o \
QDP_F3_V_vmeq_r_times_V.o \
QDP_F3_V_vmeq_V.o \
QDP_F3_V_vpeq_c_times_V.o \
QDP_F3_V_vpeq_Ma_times_V.o \
QDP_F3_V_vpeq_M_times_V.o \
QDP_F3_V_vpeq_r_times_V.o \
QDP_F3_V_vpeq_V.o \
QDP_F3_write_D.o \
QDP_F3_write_H.o \
QDP_F3_write_M.o \
QDP_F3_write_P.o \
QDP_F3_write_V.o

QDPSRC = $(QDPSRC1) $(QDPSRC2)
QDPOBJ = $(QDPOBJ1) $(QDPOBJ2)
QDPHDR = $(top_builddir)/include/qdp_f3.h qdp_f3_internal.h $(top_builddir)/include/qdp_f3_generic.h $(top_builddir)/include/qdp_f3_color_generic.h $(top_builddir)/include/qdp_f3_profile.h

BUILD_SCRIPT_DIR = $(top_srcdir)/lib/generate

BUILD_SCRIPT_C = $(BUILD_SCRIPT_DIR)/generate_sources
BUILD_SCRIPT_H = $(BUILD_SCRIPT_DIR)/generate_headers

BUILD_DEPS = \
	$(BUILD_SCRIPT_DIR)/generate_qdp.pl \
	$(BUILD_SCRIPT_DIR)/datatypes.pl \
	$(BUILD_SCRIPT_DIR)/functions.pl \
	$(BUILD_SCRIPT_DIR)/generate_types.pl \
	$(BUILD_SCRIPT_DIR)/generic.pl \
	$(BUILD_SCRIPT_DIR)/profile.pl

lib_LIBRARIES = ../libqdp_f3.a

AM_CFLAGS = -I$(top_srcdir)/include -I$(top_builddir)/include -I$(QLADIR)/include -I$(QIODIR)/include -I$(QMPDIR)/include

# this is just to force automake to include the .c.o rule
nodist____libqdp_f3_a_SOURCES = QDP_F3_c_eq_D_dot_D.c

nodist_include_HEADERS = $(QDPHDR)

$(QDPSRC): $(BUILD_SCRIPT_C) $(BUILD_DEPS)
	$(BUILD_SCRIPT_C) f3

$(QDPHDR): $(BUILD_SCRIPT_H) $(BUILD_DEPS)
	$(BUILD_SCRIPT_H) f3 $(top_builddir)/include

../libqdp_f3.a: $(QDPHDR) $(QDPOBJ) ../optimized/Makefile
	-rm -f ../libqdp_f3.a
	$(AR) $(ARFLAGS) ../libqdp_f3.a $(QDPOBJ1)
	$(AR) $(ARFLAGS) ../libqdp_f3.a $(QDPOBJ2)
	$(RANLIB) ../libqdp_f3.a

clean-local:
	-rm -f $(QDPHDR)
	-rm -f $(QDPSRC1)
	-rm -f $(QDPOBJ1)
	-rm -f $(QDPSRC2)
	-rm -f $(QDPOBJ2)
